tumblrs/elise-abroad/app.less
/* ... */
[class^="icon-"]:before, [class*=" icon-"]:before {
  font-family: "fontello";
  font-style: normal;
  font-weight: normal;
  speak: none;
  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */
  font-variant: normal;
  text-transform: none;
  line-height: 1em;
  margin-left: .2em;
}

.icon-facebook:before { content: '\e801'; } /* '' */
.icon-twitter:before { content: '\e800'; } /* '' */


// Global

html {
    font-size: 16px;

    @media screen and (min-width: @screen-sm){
        font-size: 16px;
    }

    @media screen and (min-width: @screen-md){
        font-size: 18px;
    }

    @media screen and (min-width: @screen-lg){
        font-size: 18px;
    }

    @media screen and (min-width: 1600px){
        font-size: 21px;
    }

    @media screen and (min-width: 1920px){
        font-size: 24px;
    }
}

h1,h2,h3,h4,h5,h6 {
    margin-top: 0;
}

p {
    line-height: 1.5;
    margin-bottom: @line-height-computed;
}

// Breakpoints
@screen-mega-above: ~"screen and (min-width: 1440px)";
@screen-large-above: ~"screen and (min-width: 1201px)";
@screen-large: ~"screen and (min-width: 1200px)";
@screen-medium-above: ~"screen and (min-width: 992px)";
@screen-medium: ~"screen and (max-width: 991px)";
@screen-small-above: ~"screen and (min-width: 768px)";
@screen-small: ~"screen and (max-width: 767px)";
@screen-tiny-above: ~"screen and (min-width: 481px)";
@screen-tiny: ~"screen and (max-width: 480px)";

body {
    background: #fff;

    &.permalink-page {

        padding-top: 40px;
    }
}

.container-fluid {
    .center-block;
    max-width: 1400px;
    padding-left: 15px;
    padding-right: 15px;

    .index-page & {
        max-width: 1070px;
    }

    .row > header {
        .make-md-column(3);
    }
}

.npr-logo img {
    height: 24px;
    margin-bottom: 0;
    @media @screen-small-above {
         height: 24px;
         margin-bottom: 0;
    }

    &:hover {
        opacity: 0.5;
    }
}

.blog-header {
    background: @pink;
    position: relative;
    z-index: 150;
    padding-top: 20px;
    text-align: center;

    .blog-title {
        .make-sm-column(12);
        .make-md-column(8);
        .make-md-column-offset(2);
    }

    h1 {
        margin: 0 0 @line-height-computed;
        text-align: center;

        a {
            text-decoration: none;

            &:hover img {
                opacity: 0.7;
            }
        }
    }

    h3 {
        margin: 0 0 @line-height-computed;
        font-size: @font-size-large;
        text-align: center;
        text-transform: uppercase;
        letter-spacing: 0.3rem;
        font-weight: 400;

        a {
            color: @yellow;

            // &:before {
            //     content: '(';
            // }

            // &:after {
            //     content: ')';
            // }

            &:hover {
                opacity: 0.7;
                text-decoration: none;
            }
        }
    }

    .description {
        color: #fff;
        font-family: @font-family-condensed;
        font-size: @font-size-base * 0.75;
        text-transform: uppercase;
        -webkit-font-smoothing: antialiased;
        margin-bottom: @line-height-computed;
        text-align: center;

        @media @screen-small-above {
            font-size: @font-size-base * 0.875;
        }

        a {
            color: #fff;
            opacity: 0.8;
            margin-left: 20px;
        }
    }

    @media screen and (min-width: 651px){
        padding-top: 30px;
    }
}


//header nav
body > nav {
    background: #eee;

    .permalink-page & {
        //background: @pink;
    }

    #header-nav {
        .make-sm-column(12);
        .make-md-column(8);
        .make-md-column-offset(2);
        margin-bottom: 0;

        // .permalink-page & {

        //     padding-bottom: 20px;
        //     border-bottom: 1px solid #ddd;
        //     margin-bottom: 20px;
        //     @media @screen-small-above {
        //        //margin-bottom: 40px;
        //     }

        //     li {



        //     }

        // }

        ul {
            padding: 0 0 0 0;
            margin: 0 auto;
            list-style-type: none;
            text-align: center;
        }

        li {
            display: inline-block;
            padding: 0.5rem 0.3rem;
            font-size: @font-size-base * 0.714285714;
            // border-left: 1px solid #333;
            line-height: 1.2;

            &:first-child{
                border: none;
            }

            // @media @screen-small-above {
            //     padding: 0 15px;
            //     font-size: 13px;
            // }
        }

        a {
            color: #333;
            font-family: @font-family-sans-serif;
            text-transform: uppercase;
            text-decoration: none;

            &:hover {
                color: @pink;
            }
        }
    }
}
/* ... */

